# rastrum

./: .clang-format  .gitattributes  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
apps/: CMakeLists.txt  framebuffer_example.cpp  hello.cpp  model_example.cpp
data/centurion_helmet/: centurion_helmet.mtl  license.txt
include/rastrum/: FrameBuffer.h  Model.h  Obj.h  Vector.h  Vector2D.h  Vector3D.h  rastrum.h
src/: CMakeLists.txt  FrameBuffer.cpp  Model.cpp  Obj.cpp  rastrum.cpp  terminal.cpp  terminal.h
